support for 26.2