@@ -7,11 +7,6 @@ version = project.mod_version
 
 def targetMinecraftVersion = stonecutter.current.version
 def platformName = project.parent?.name ?: project.name
-def manifoldVersion = '2026.1.8'
-
-if (!(targetMinecraftVersion in ['26.1.2', '26.2'])) {
-    throw new GradleException("Unsupported Minecraft version for Manifold preprocessing: ${targetMinecraftVersion}")
-}
 
 base {
     archivesName = platformName
@@ -21,34 +16,11 @@ repositories {
     mavenCentral()
 }
 
-sourceSets {
-    manifold {
-        java {
-            srcDir 'src/manifold/java'
-            exclude 'build.properties'
-        }
-    }
-}
-
-configurations {
-    manifoldCompileOnly.extendsFrom compileOnly
-    manifoldAnnotationProcessor.extendsFrom annotationProcessor
-}
-
-def mainCompileClasspath = sourceSets.main.compileClasspath
-sourceSets.manifold.compileClasspath += mainCompileClasspath
-// Kotlin consumes the preprocessed class output instead of parsing Java files containing #if.
-sourceSets.main.compileClasspath += sourceSets.manifold.output
-sourceSets.main.runtimeClasspath += sourceSets.manifold.output
-
 loom {
     accessWidenerPath = project.parent.file("src/main/resources/katton.accesswidener")
 }
 
 dependencies {
-    manifoldCompileOnly "systems.manifold:manifold-preprocessor:${manifoldVersion}"
-    manifoldAnnotationProcessor "systems.manifold:manifold-preprocessor:${manifoldVersion}"
-
     compileOnly 'org.jetbrains.kotlin:kotlin-compiler-embeddable'
     compileOnly 'org.jetbrains.kotlin:kotlin-daemon-embeddable'
     compileOnly 'org.jetbrains.kotlin:kotlin-reflect'
@@ -78,36 +50,6 @@ dependencies {
 java {
     withJavadocJar()
     withSourcesJar()
-}
-
-tasks.named('compileManifoldJava', JavaCompile) {
-    options.annotationProcessorPath = configurations.manifoldAnnotationProcessor
-    options.compilerArgs += [
-        '-Xplugin:Manifold',
-        "-AMC_VERSION=${targetMinecraftVersion}"
-    ]
-    options.fork = true
-    options.forkOptions.jvmArgs += '--add-exports=java.base/jdk.internal.access=ALL-UNNAMED'
-}
-
-tasks.named('compileKotlin') {
-    dependsOn tasks.named('compileManifoldJava')
-}
-
-tasks.named('compileJava') {
-    dependsOn tasks.named('compileManifoldJava')
-}
-
-tasks.named('classes') {
-    dependsOn tasks.named('manifoldClasses')
-}
-
-tasks.named('jar') {
-    from sourceSets.manifold.output
-}
-
-tasks.named('sourcesJar') {
-    from sourceSets.manifold.allSource
 }
 
 tasks.withType(Javadoc).configureEach {
